<resources>
    <string name="app_name">EatItServer</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_category">Category</string>
    <string name="menu_food_list">FoodList</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="popular_categori">Category</string>
    <string name="menu_search">Search</string>
    <string name="menu_order">Order</string>
    <string name="menu_sign_out">Sign out</string>
    <string name="action_filter">Filter</string>
    <string name="menu_shpper">Shippers</string>
    <string name="menu_shipper">Shippers</string>
    <string name="title_activity_tracking_order">Map</string>
    <string name="menu_best_deals">Best Deals</string>
    <string name="menu_most_popular">Most popular</string>
</resources>