<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_category">

    <fragment
        android:id="@+id/nav_category"
        android:name="etn.app.danghoc.eatitserver.ui.category.CategoryFragment"
        android:label="@string/menu_category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/nav_food_list"
        android:name="etn.app.danghoc.eatitserver.ui.food_list.FoodListFragment"
        android:label="@string/menu_food_list"
        tools:layout="@layout/fragment_food_list">
        <action
            android:id="@+id/clearBackStack"
            app:popUpTo="@id/nav_category"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/nav_order"
        android:name="etn.app.danghoc.eatitserver.ui.order.OrderFragment"
        android:label="@string/menu_order"
        tools:layout="@layout/fragment_order">
        <action
            android:id="@+id/clearBackStack"
            app:popUpTo="@id/nav_category"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_shipper"
        android:name="etn.app.danghoc.eatitserver.ui.shipper.ShipperFragment"
        android:label="@string/menu_shipper"
        tools:layout="@layout/fragment_shipper">
        <action
            android:id="@+id/clearBackStack"
            app:popUpTo="@id/nav_category"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_order2"
        android:name="etn.app.danghoc.eatitserver.ui.order2.OrderFragment2"
        android:label="Order2"
        tools:layout="@layout/fragment_order_fragment2">

        <action
            android:id="@+id/clearBackStack"
            app:popUpTo="@id/nav_category"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_best_deals"
        android:name="etn.app.danghoc.eatitserver.ui.best_deals.BestDealsFragment"
        android:label="@string/menu_best_deals"
        tools:layout="@layout/best_deals_fragment">

        <action
            android:id="@+id/clearBackStack"
            app:popUpTo="@id/nav_category"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_most_popular"
        android:name="etn.app.danghoc.eatitserver.ui.most_popular.MostPopularFragment"
        android:label="@string/menu_most_popular"
        tools:layout="@layout/most_popular_fragment">

        <action
            android:id="@+id/clearBackStack"
            app:popUpTo="@id/nav_category"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_send_news"
        android:name="etn.app.danghoc.eatitserver.ui.send_news.SendNewFragment"
        android:label="Send new"
        tools:layout="@layout/send_new_fragment">

        <action
            android:id="@+id/clearBackStack"
            app:popUpTo="@id/nav_category"
            app:popUpToInclusive="true" />
    </fragment>


</navigation>